--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2020</span>
-		    					<h2>Python Django Expert</h2>
-		    					<span class="position">Center for Development of IT Professionals</span>
+		    					<h2>Certification on Trainning of a Neural Network</h2>
+		    					<span class="position">Coursera</span>
 		    				</div>
 	    				</div>
 					  </div>
