--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am a professional full stack developer. I like to explore new things from 
-					an early age. I always like to solve problems. I participeted in different contests to prove myself.
-				    I always took challenges.I have the ability to work under pressure. I also like to travel and make new friends. Reading books is my favourite hobby during leisure period. I have experience in different domain of science and technology. I want to explore new technology. My knowledge and experience can be shared to help building the next big thing.</p>
+		            <p>I am a professional full-stack developer. I like to explore new things from 
+					an early age. I always like to solve problems. I participated in different contests to prove myself.
+				    I always took challenges. I can work under pressure. I also like to travel and make new friends. Reading books is my favourite hobby during my leisure period. I have experience in different domains of science and technology. I want to explore new technology. My knowledge and experience can be shared to help to build the next big thing.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Mohammad Nahin Hossain Uday</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 03, 1997</span></li>
@@ -163,7 +163,7 @@
 		    					<h2>Bachelor of Science in Computer Science and Engineering</h2>
 		    					<span class="position">American International Univarsity Bangladesh</span>
 							<ul class="list margin-b-30">
-							<li>CGPA - 3.58</li>
+							<li>CGPA - 3.60</li>
 						</ul>
 	    					</div>
 	    				</div>
@@ -206,10 +206,10 @@
 		    					<span class="date">2019 - Present</span>
 		    					<h2>General Member</h2>
 		    					<span class="position">AIUB Computer Club</span>
-		    					<p>I worked for this club for a long period. I volunteered in some events. I gather many experience about organizing an event. Also there are much more things I learned from this membership. </p>
+		    					<p>I worked for this club for a long period. I volunteered at some events. I gather many experiences about organizing an event. Also, there are much more things I learned from this membership. </p>
 		    					<ul class="list margin-b-30">
 							<li>Only official club from AIUB Computer Science department.</li>
-							<li>Organize various events including programming contests.</li>
+							<li>Organise various events including programming contests.</li>
 							<li>Social networking platform for Computer Science depertment students.</li>
 						</ul>
 		    				</div>
@@ -222,11 +222,11 @@
 		    					<span class="date">2020 - Present</span>
 		    					<h2>General Member</h2>
 		    					<span class="position">IEEE AIUB Branch</span>
-		    					<p>I feel very lucky to get a chance to be a member of this club. I got many international magazies and papers which helps to develop my skills. Also i was a part of an international event because of this club.</p>
+		    					<p>I feel very lucky to get a chance to be a member of this club. I got many international magazines and papers which helps to develop my skills. Also, I was a part of an international event because of this club.</p>
 						<ul class="list margin-b-30">
 							<li>It is an international platform.</li>
-							<li>Organize International events.</li>
-							<li>Published research based magazines and papers.</li>
+							<li>Organise International events.</li>
+							<li>Published research-based magazines and papers.</li>
 						</ul>
 		    				</div>
 	    				</div>
@@ -858,7 +858,7 @@
 
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Have a Question?</h2>
             	<h2>Feel Free to Talk</h2>
             	<div class="block-23 mb-3">
 	              <ul>
