Website version Erstemal im Deutschland

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Full Stack Developer", "and", "Researcher" ]'></span>
+								     data-rotate='[ "Data Scientist", "and", "Researcher" ]'></span>
 								</h2>
 							</div>
             </div>
@@ -86,16 +86,17 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am a professional full-stack developer. I like to explore new things from 
-					an early age. I always like to solve problems. I participated in different contests to prove myself.
-				    I always took challenges. I can work under pressure. I also like to travel and make new friends. Reading books is my favourite hobby during my leisure period. I have experience in different domains of science and technology. I want to explore new technology. My knowledge and experience can be shared to help to build the next big thing.</p>
+		             <p>
+		             	I am currently doing a Master's in Computer Simulation in Science and working as a Data Scientist at Aptiv. I am working as a work student employee. I want to
+						enhance my carrier as a computer engineer. I want to explore new areas of Data Science and Data engineering. Furthermore, I want to be up to date with modern technology. Being a team player, I am always comfortable working in a team. In addition, I can work under pressure. Lastly, I now need the opportunity to prove myself in different types of work environments in the industry.
+				     </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Mohammad Nahin Hossain Uday</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Md Nahin Hossain Uday</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 03, 1997</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Road 09,Block C,Basundhara R/A,Dhaka 1229</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1229</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Max-Horkheimer straße 16, Zimmer Nr. (36-14-1), Wuppertal,Germany</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>42119</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>nahinu95@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+8801621484741</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+4915752658090</span></li>
 		            </ul>
 		          </div>
 		        </div>
@@ -105,7 +106,7 @@
 	                <span class="number" data-number="10">0</span>
 	                <span>Project completed</span>
                 </p>
-                <p><a href="nahin_resume.pdf" class="btn btn-primary py-3 px-3">Download CV  <i class="icon-download"></i></a></p>
+                <p><a href="CV_Nahin_Uday.pdf" class="btn btn-primary py-3 px-3">Download CV  <i class="icon-download"></i></a></p>
               </div>
 	          </div>
 	        </div>
@@ -160,12 +161,25 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">Present</span>
-		    					<h2>Bachelor of Science in Computer Science and Engineering</h2>
-		    					<span class="position">American International Univarsity Bangladesh</span>
+		    					<h2>Master's in Computer Simulation in Science</h2>
+		    					<span class="position">Univarsity of Wuppertal</span>
 							<ul class="list margin-b-30">
-							<li>CGPA - 3.60</li>
+							<!-- <li>CGPA - 1</li> -->
 						</ul>
 	    					</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2020</span>
+		    					<h2>Bachelor of Science in Computer Science and Engineering</h2>
+		    					<span class="position">American International Univarsity Bangladesh</span>
+		    					<ul class="list margin-b-30">
+							<li>CGPA - 3.60</li>
+						</ul>
+		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
@@ -268,7 +282,7 @@
 					  	<div class="row">
 					  		<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>HTML5 & CSS</h3>
+										<h3>Python</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="91"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:91%">
@@ -279,7 +293,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>javascript</h3>
+										<h3>Data Science</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -305,7 +319,7 @@
 										<div class="progress">
 										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="83"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:83%">
-										    <span>83%</span>
+										    <span>75%</span>
 										  	</div>
 										</div>
 									</div>
@@ -316,14 +330,14 @@
 										<div class="progress">
 										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="77"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:77%">
-										    <span>77%</span>
+										    <span>71%</span>
 										  	</div>
 										</div>
 									</div>
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>PHP</h3>
+										<h3>C/C++</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="87"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:87%">
@@ -345,7 +359,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>Python</h3>
+										<h3>PHP</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -367,7 +381,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>C/C++</h3>
+										<h3>Data Engineering</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -404,7 +418,7 @@
 										<div class="progress">
 										 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="75"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-										    <span>75%</span>
+										    <span>65%</span>
 										  	</div>
 										</div>
 									</div>
@@ -424,7 +438,7 @@
 					  </div>
 
 					  <div id="page-4" class= "page four">
-					    <h2 class="heading">Awards</h2>
+					    <h2 class="heading">Awards and Honours</h2>
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -443,6 +457,26 @@
 		    					<span class="date">2020</span>
 		    					<h2>Certification on Trainning of a Neural Network</h2>
 		    					<span class="position">Coursera</span>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2020</span>
+		    					<h2>Special Interest Group on Humanitarian Technology</h2>
+		    					<span class="position">IEEE</span>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2020</span>
+		    					<h2>Consultants Network</h2>
+		    					<span class="position">IEEE</span>
 		    				</div>
 	    				</div>
 					  </div>
@@ -466,8 +500,8 @@
 								<i class="flaticon-analysis"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Web Development</h3>
-								<p>Full Stack Web Development</p>
+								<h3 class="mb-5">Data Scientist</h3>
+								<p>Image and Text data</p>
 							</div>
 						</a>
 					</div>
@@ -513,8 +547,8 @@
 								<i class="flaticon-ux-design"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">UI Design</h3>
-								<p>Dynamic User Interface Designing.</p>
+								<h3 class="mb-5">Data Base</h3>
+								<p>Static and Dynamic data</p>
 							</div>
 						</a>
 					</div>
@@ -556,7 +590,7 @@
 											<span><b>people can make schedule for their appointment with doctor.also they can schedule their drugs. </b></span>
 											<p class="icon">
 												<span>
-													<a href="https://github.com/NH-Uday"
+													<a href="https://github.com/NH-Uday/Doctor_schedule"
 														target="_blank"><i class="fab fa-github"></i> View in GitHub</a>
 												</span>
 											</p>
@@ -585,14 +619,14 @@
 
 							<div class="col-md-6 animate-box portfolio iot"
 								data-animate-effect="fadeInLeft">
-								<div class="project" style="background-image: url(images/iot.jpg);">
+								<div class="project" style="background-image: url(images/Network.png);">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="#">Door security</a></h3>
-											<span><b>Door security is an advanced door security system. </b></span>
+											<h3><a href="#">PSO Neural Network</a></h3>
+											<span><b>This code was used during my Bachelor Thesis about PSO neural network </b></span>
 											<p class="icon">
 												<span>
-													<a href="https://github.com/NH-Uday"
+													<a href="https://github.com/NH-Uday/pso_neural_network"
 														target="_blank"><i class="fab fa-github"></i> View in GitHub</a>
 												</span>
 											</p>
@@ -607,7 +641,7 @@
 									<div class="desc">
 										<div class="con">
 											<h3><a href="#">Research Papers</a></h3>
-											<span><b>This are my research papers during my undergraduate and graduate time.</b></span>
+											<span><b>This are my research papers during my undergraduate time.</b></span>
 											<p class="icon">
 												<span>
 													<a href="https://github.com/NH-Uday"
@@ -621,14 +655,14 @@
 
 							<div class="col-md-6 animate-box portfolio iot"
 								data-animate-effect="fadeInLeft">
-								<div class="project" style="background-image: url(images/iot.jpg);">
+								<div class="project" style="background-image: url(images/CV.jpg);">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="#">Object Detector</a></h3>
-											<span><b>The circuit will react when it detect an object within a range. It can be used for security purposes.</b></span>
+											<h3><a href="#">Object Tracking with OpenCV and Python</a></h3>
+											<span><b>The module can track object in a specific location</b></span>
 											<p class="icon">
 												<span>
-													<a href="https://github.com/NH-Uday"
+													<a href="https://github.com/NH-Uday/Object_Tracking_with_OpenCV_and_Python"
 														target="_blank"><i class="fab fa-github"></i> View in GitHub</a>
 												</span>
 											</p>
@@ -646,7 +680,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="2">0</strong>
+                <strong class="number" data-number="4">0</strong>
                 <span>Awards</span>
               </div>
             </div>
@@ -759,7 +793,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>Road 09,Block C,Basundhara R/A,Dhaka 1229</p>
+		            <p>Max-Horkheimer straße 16, Zimmer Nr. (36-14-1), Wuppertal,Germany</p>
 		          </div>
 	          </div>
           </div>
@@ -770,7 +804,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+8801621484741</a></p>
+		            <p><a href="tel://1234567920">+4915752658090</a></p>
 	            </div>
 	          </div>
           </div>
@@ -792,7 +826,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href=" https://nh-uday.github.io/me/">nahinuday.github.io</a></p>
+		            <p><a href=" https://nh-uday.github.io/me/">https://nh-uday.github.io/me/?fbclid=IwAR3JiPopGNLlXOUbW-CIQbSqHrq9weQVnOvo9WKkr4cZ2ZnTTc8Ai1x8XaI</a></p>
 	            </div>
 	          </div>
           </div>
@@ -847,10 +881,10 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Desktop Application Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Mobile Application Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>UI Design</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Science and Data Engineering</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Desktop and Mobile Application Development</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Base</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Big Data handeling</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
               </ul>
             </div>
@@ -862,7 +896,7 @@
             	<h2>Feel Free to Talk</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+8801621484741</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+4915752658090</span></a></li>
 	                <li><a href="mailto:nahinu95@gmail.com"><span class="icon icon-envelope"></span><span class="text">nahinu95@gmail.com</span></a></li>
 	              </ul>
 	            </div>
