--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
 		             <p>
-		             	I am currently doing a Master's in Computer Simulation in Science and working as a Data Scientist at Aptiv. I am working as a work student employee. I want to
-						enhance my carrier as a computer engineer. I want to explore new areas of Data Science and Data engineering. Furthermore, I want to be up to date with modern technology. Being a team player, I am always comfortable working in a team. In addition, I can work under pressure. Lastly, I now need the opportunity to prove myself in different types of work environments in the industry.
+		             	I am currently doing a Master's in Computer Simulation in Science and working as a part-time Data Scientist at Aptiv. I want to enhance my career as a computer engineer. I want to explore new areas of Data Science and Data engineering. Being a team player, I worked in a team of 20 people to organise an IEEE international conference. I pursue new opportunities in different work environments in the industry
 				     </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Md Nahin Hossain Uday</span></li>
@@ -293,7 +292,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>Data Science</h3>
+										<h3>Java script</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -304,7 +303,7 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>Database</h3>
+										<h3>Oracle</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
@@ -318,7 +317,7 @@
 										<h3>Java</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="83"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:83%">
+										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
 										    <span>75%</span>
 										  	</div>
 										</div>
@@ -329,7 +328,7 @@
 										<h3>C#</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="77"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:77%">
+										  	aria-valuemin="0" aria-valuemax="100" style="width:71%">
 										    <span>71%</span>
 										  	</div>
 										</div>
@@ -381,11 +380,11 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>Data Engineering</h3>
+										<h3>Matlab</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										    <span>90%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
+										    <span>50%</span>
 										  	</div>
 										</div>
 									</div>
@@ -417,7 +416,7 @@
 										<h3>Laravel</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="75"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+										  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
 										    <span>65%</span>
 										  	</div>
 										</div>
@@ -537,7 +536,7 @@
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Application Development</h3>
-								<p>Desktop and Mobile Application Development</p>
+								<p>Desktop, Mobile and Web Application Development</p>
 							</div>
 						</a>
 					</div>
