--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Data Scientist", "and", "Data Analyst" ]'></span>
+								     data-rotate='[ "Software developer", "and", "Data Analyst" ]'></span>
 								</h2>
 							</div>
             </div>
@@ -92,7 +92,7 @@
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
 		             <p>
-						I am currently pursuing a Master’s degree in Computer Simulation in Science and working as a Student Assistant at the University of Wuppertal. Previously, I gained valuable experience as a Data Scientist at Aptiv, where I honed my technical and analytical skills. My goal is to advance my career as a computer engineer by exploring emerging areas in Data Science and Data Engineering. I excel in collaborative environments, as evidenced by my role in organizing an IEEE international conference with a team of 20. Open to diverse work environments, I am driven by curiosity and a passion for continuous learning and innovation.
+						I am currently pursuing a Master’s degree in Computer Simulation in Science and working as a Student Assistant at the University of Wuppertal. Previously, I gained valuable experience as a Data Analyst at Aptiv, where I honed my technical and analytical skills. My goal is to advance my career as a computer engineer by exploring emerging areas in Software development and Data Science. I excel in collaborative environments, as evidenced by my role in organizing an IEEE international conference with a team of 20. Open to diverse work environments, I am driven by curiosity and a passion for continuous learning and innovation.
 				     </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Md Nahin Hossain Uday</span></li>
@@ -107,7 +107,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="7">0</span>
+	                <span class="number" data-number="12">0</span>
 	                <span>Project completed</span>
                 </p>
                 <p><a href="CV_Nahin_Uday.pdf" class="btn btn-primary py-3 px-3">Download CV  <i class="icon-download"></i></a></p>
@@ -665,7 +665,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="7">0</strong>
+                <strong class="number" data-number="12">0</strong>
                 <span>Complete Projects</span>
               </div>
             </div>
