Roadsimulator error fix

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 
 							<div class="col-md-6 animate-box portfolio web"
 								data-animate-effect="fadeInLeft">
-								<div class="project" style="background-image: url(images/roadsimulator.png);">
+								<div class="project" style="background-image: url(images/Roadsimulator.png);">
 									<div class="desc">
 										<div class="con">
 											<h3><a href="#">Roadsimulator</a></h3>
