Certificate download button

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	                <span class="number" data-number="12">0</span>
 	                <span>Project completed</span>
                 </p>
-                <p><a href="CV_nahin.pdf" class="btn btn-primary py-3 px-3">Download CV  <i class="icon-download"></i></a></p>
+                <p><a href="pdf/CV_nahin.pdf" class="btn btn-primary py-3 px-3">Download CV  <i class="icon-download"></i></a></p>
               </div>
 	          </div>
 	        </div>
@@ -423,8 +423,11 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2020</span>
-		    					<h2>Certification on Trainning of a Neural Network</h2>
+		    					<h2>Certification on Deep Learningk</h2>
 		    					<span class="position">Coursera</span>
+								<div class="mt-2"></div>
+									<a href="pdf/Coursera 8MA8VDVQGV6N.pdf" download class="btn btn-primary mt-2">Download Certificate</a>
+								</div>	
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -435,6 +438,9 @@
 		    					<span class="date">2020</span>
 		    					<h2>Special Interest Group on Humanitarian Technology</h2>
 		    					<span class="position">IEEE</span>
+								<div>
+									<a href="pdf/IEEEMemberCertificate_3.pdf" download class="btn btn-primary mt-2">Download Certificate</a>
+								</div>	
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -445,6 +451,9 @@
 		    					<span class="date">2020</span>
 		    					<h2>Consultants Network</h2>
 		    					<span class="position">IEEE</span>
+								<div>
+									<a href="pdf/IEEEMemberCertificate_2.pdf" download class="btn btn-primary mt-2">Download Certificate</a>
+								</div>	
 		    				</div>
 	    				</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -455,6 +464,9 @@
 		    					<span class="date">2019</span>
 		    					<h2>Certification on IoT devices</h2>
 		    					<span class="position">AIUB Continuing Education Center</span>
+								<div>
+									<a href="pdf/IoT_bootcamp_Nahin_Hossain_Uday.pdf" download class="btn btn-primary mt-2">Download Certificate</a>
+								</div>	
 		    				</div>
 	    				</div>
 					  </div>
