--- a/index.html
+++ b/index.html
@@ -115,11 +115,7 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
-	                <span class="number" data-number="12">0</span>
-	                <span>Project completed</span>
-                </p>
-                <p><a href="pdf/CV_nahin.pdf" class="btn btn-primary py-3 px-3">Download CV  <i class="icon-download"></i></a></p>
+                <p><a href="pdf/CV_Nahin.pdf" class="btn btn-primary py-3 px-3">Download CV  <i class="icon-download"></i></a></p>
               </div>
 	          </div>
 	        </div>
@@ -576,9 +572,8 @@
 									<span><a href="#" data-filter=".web">Web</a></span>
 									<span><a href="#" data-filter=".desktop">Desktop</a></span>
 								<!--<span><a href="#" data-filter=".image_processing">CV</a></span>-->
-								<!--<span><a href="#" data-filter=".ai">AI and Machine Learning</a></span>-->
 								<!--<span><a href="#" data-filter=".data_science">Data Science</a></span>-->
-									<span><a href="#" data-filter=".iot">IoT</a></span>
+									<span><a href="#" data-filter=".ai">AI and Machine Learning</a></span>
 									<span><a href="#" data-filter=".research">Research</a></span>
 								</p>
 							</div>
@@ -608,7 +603,7 @@
 									<div class="desc">
 										<div class="con">
 											<h3><a href="#">Roadsimulator</a></h3>
-											<span><b>This app helps user to get necessary information about Germany's Road network. The information includes maximum speed and minimum time to cross a specific road. </b></span>
+											<span><b>This webapp helps user to get necessary information about Germany's Road network. The information includes maximum speed and minimum time to cross a specific road and other necessary statistical information. </b></span>
 											<p class="icon">
 												<span>
 													<a href="https://github.com/NH-Uday/Roadsimulator"
@@ -620,16 +615,16 @@
 								</div>
 							</div>
 
-							<div class="col-md-6 animate-box portfolio iot"
+							<div class="col-md-6 animate-box portfolio ai"
 								data-animate-effect="fadeInLeft">
-								<div class="project" style="background-image: url(images/Network.png);">
+								<div class="project" style="background-image: url(images/ffnet_result.png);">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="#">PSO Neural Network</a></h3>
-											<span><b>This code was used during my Bachelor Thesis about PSO neural network </b></span>
+											<h3><a href="#">Text recognition with FNN</a></h3>
+											<span><b>This Feedforward Neural Network is developed for text recognition.</b></span>
 											<p class="icon">
 												<span>
-													<a href="https://github.com/NH-Uday/pso_neural_network"
+													<a href="https://github.com/NH-Uday/Feed-Forward-Neural-Network-for-Text-Recognition.git"
 														target="_blank"><i class="fab fa-github"></i> View in GitHub</a>
 												</span>
 											</p>
@@ -691,8 +686,8 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="12">0</strong>
-                <span>Complete Projects</span>
+                <strong class="number" data-number="2">0</strong>
+                <span>Years of experience</span>
               </div>
             </div>
           </div>
