--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 	
   </head>
@@ -104,9 +105,9 @@
 						I am currently pursuing a Master’s degree in Computer Simulation in Science and working as a Student Assistant at the University of Wuppertal. Previously, I gained valuable experience as a Data Analyst at Aptiv, where I honed my technical and analytical skills. My goal is to advance my career as a computer engineer by exploring emerging areas in Software development and Data Science. I excel in collaborative environments, as evidenced by my role in organizing an IEEE international conference with a team of 20. Open to diverse work environments, I am driven by curiosity and a passion for continuous learning and innovation.
 				     </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Md Nahin Hossain Uday</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Muhammad Nahin Hossain Uday</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 03, 1997</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Echoer straße 6, Ronsdorf, Wuppertal,Germany</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Echoer Straße 6, Ronsdorf, Wuppertal, Germany</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>42369</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>nahinu95@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+491709932145</span></li>
@@ -157,7 +158,7 @@
 					      <li><a href="#page-1">Education</a></li>
 					      <li><a href="#page-2">Experience</a></li>
 					      <li><a href="#page-3">Skills</a></li>
-					      <li><a href="#page-4">Awards</a></li>
+					      <li><a href="#page-4">Achievements</a></li>
 					    </ul>
 					  </nav>
 					</div>
@@ -186,7 +187,7 @@
 		    					<h2>Bachelor of Science in Computer Science and Engineering</h2>
 		    					<span class="position">American International Univarsity Bangladesh</span>
 		    					<ul class="list margin-b-30">
-							<li>CGPA - 3.60</li>
+							<li>CGPA - 3.60 (1.8 in German grade evaluation system)</li>
 						</ul>
 		    				</div>
 	    				</div>
@@ -220,9 +221,10 @@
 		    					<span class="position">Aptiv</span>
 		    					<p>I feel very lucky to get a chance at APtiv as a Data Scientist work student.</p>
 						<ul class="list margin-b-30">
-							<li>Design an interactive user module by integrating data collected from ADAS cemeras.</li>
-							<li>Developed a PostgreSQL database for efficient data storage and retrieval.</li>
-							<li>Built a Django-React application for visualizing real-time data insights.</li>
+							<li>Extracted and transformed GPS data from YAML and pickle files using Python scripts.</li>						
+							<li>Designed and implemented a PostgreSQL database schema for storing data in a structured way.</li>
+							<li>Created a map generation tool to visualise location data using Folium.</li>
+							<li>Build a Django backend and React frontend to serve map data via a web interface.</li>
 						</ul>
 		    				</div>
 	    				</div>
@@ -421,7 +423,7 @@
 					  </div>
 
 					  <div id="page-4" class= "page four">
-					    <h2 class="heading">Awards and Honours</h2>
+					    <h2 class="heading">Extracurricular and Technical achievements</h2>
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -679,7 +681,7 @@
             <div class="block-18 shadow">
               <div class="text">
                 <strong class="number" data-number="4">0</strong>
-                <span>Awards</span>
+                <span>Extracurricular certificates</span>
               </div>
             </div>
           </div>
@@ -746,7 +748,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>Echoer straße 6, Ronsdorf, Wuppertal,Germany</p>
+		            <p>Echoer Straße 6, 42369 Ronsdorf, Wuppertal,Germany</p>
 		          </div>
 	          </div>
           </div>
@@ -823,8 +825,8 @@
               <p>Thank you for visiting my website. I am ready to help you. </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               	<li class="ftco-animate"><a href="https://www.linkedin.com/in/muhammad-nahin-hussain-uday-028ab9193/"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="https://twitter.com/nahin_uday"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="https://web.facebook.com/nahinhossain.uday.9"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.xing.com/profile/MuhammadNahinHussain_Uday/web_profiles"><span class="fab fa-xing"></span></a></li>
+                
                 <li class="ftco-animate"><a href="https://github.com/NH-Uday"><span class="icon-github"></span></a></li>
               </ul>
             </div>
