--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 									<div class="desc">
 										<div class="con">
 											<h3><a href="#">Text recognition with FNN</a></h3>
-											<span><b>This Feedforward Neural Network is developed for text recognition.</b></span>
+											<span><b>This Feedforward Neural Network is developed for text recognition. It is developed using MATLAB code.</b></span>
 											<p class="icon">
 												<span>
 													<a href="https://github.com/NH-Uday/Feed-Forward-Neural-Network-for-Text-Recognition.git"
@@ -653,16 +653,16 @@
 								</div>
 							</div>
 
-							<div class="col-md-6 animate-box portfolio iot"
+							<div class="col-md-6 animate-box portfolio ai"
 								data-animate-effect="fadeInLeft">
-								<div class="project" style="background-image: url(images/CV.jpg);">
+								<div class="project" style="background-image: url(images/chatbot.png);">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="#">Object Tracking with OpenCV and Python</a></h3>
-											<span><b>The module can track object in a specific location</b></span>
+											<h3><a href="#">Chatbot AI companion</a></h3>
+											<span><b>The Chatbot helps students in the Lab to complete tasks. ChatGPT is connected in the background through the API. The answers are fashioned in a specific way for students' assessment.</b></span>
 											<p class="icon">
 												<span>
-													<a href="https://github.com/NH-Uday/Object_Tracking_with_OpenCV_and_Python"
+													<a href="https://github.com/NH-Uday/Chatbot"
 														target="_blank"><i class="fab fa-github"></i> View in GitHub</a>
 												</span>
 											</p>
