chatbot project added

--- a/index.html
+++ b/index.html
@@ -605,11 +605,11 @@
 									<div class="desc">
 										<div class="con">
 											<h3><a href="#">Roadsimulator</a></h3>
-											<span><b>This webapp helps user to get necessary information about Germany's Road network. The information includes maximum speed and minimum time to cross a specific road and other necessary statistical information. </b></span>
+											<span><b>This webapp helps user to get necessary information about Germany's Highway network. The information includes maximum speed and minimum time to cross a specific area. Moreover, necessary statistical information. </b></span>
 											<p class="icon">
 												<span>
-													<a href="https://github.com/NH-Uday/Roadsimulator"
-														target="_blank"><i class="fab fa-github"></i> View in GitHub</a>
+													<a href="https://zulana-wuppertal.de/"
+														target="_blank">View Project</a>
 												</span>
 											</p>
 										</div>
@@ -645,7 +645,7 @@
 											<p class="icon">
 												<span>
 													<a href="https://doi.org/10.5815/ijisa.2024.03.06"
-														target="_blank"><i class="fab fa-github"></i> View Publication</a>
+														target="_blank">View Publication</a>
 												</span>
 											</p>
 										</div>
@@ -653,17 +653,17 @@
 								</div>
 							</div>
 
-							<div class="col-md-6 animate-box portfolio ai"
+							<div class="col-md-6 animate-box portfolio ai web"
 								data-animate-effect="fadeInLeft">
-								<div class="project" style="background-image: url(images/chatbot.png);">
+								<div class="project" style="background-image: url(images/chatbot.jpg);">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="#">Chatbot AI companion</a></h3>
-											<span><b>The Chatbot helps students in the Lab to complete tasks. ChatGPT is connected in the background through the API. The answers are fashioned in a specific way for students' assessment.</b></span>
+											<h3><a href="#">AI Chatbot</a></h3>
+											<span><b>The Chatbot helps students in the Lab to complete tasks. ChatGPT is connected through the API. The answers are modified in a specific way.</b></span>
 											<p class="icon">
 												<span>
-													<a href="https://github.com/NH-Uday/Chatbot"
-														target="_blank"><i class="fab fa-github"></i> View in GitHub</a>
+													<a href="https://skills.uni-wuppertal.de/"
+														target="_blank">View Project</a>
 												</span>
 											</p>
 										</div>
@@ -824,7 +824,7 @@
               <h2 class="ftco-heading-2">Comment</h2>
               <p>Thank you for visiting my website. I am ready to help you. </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-              	<li class="ftco-animate"><a href="https://www.linkedin.com/in/muhammad-nahin-hussain-uday-028ab9193/"><span class="icon-linkedin"></span></a></li>
+              	<li class="ftco-animate"><a href="https://www.linkedin.com/in/nahinuday/"><span class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.xing.com/profile/MuhammadNahinHussain_Uday/web_profiles"><span class="fab fa-xing"></span></a></li>
                 
                 <li class="ftco-animate"><a href="https://github.com/NH-Uday"><span class="icon-github"></span></a></li>
